Update all documentation to reflect Kubernetes deployment, CI/CD pipeline, and Actuator
- CLAUDE.md: add kubectl/helm commands, k8s infra details, Jenkins setup notes,
  Actuator health endpoints, DB schema warning, security notes
- README.md: full rewrite — add Kubernetes/Helm section, CI/CD pipeline table,
  health endpoints, updated troubleshooting table, remove stale duplicate content
- docs/API.md: add required headers, base URL table, health endpoints section,
  full curl examples for both Git Bash and PowerShell
- docs/CONFIGURATION.md: add Actuator/management block, Helm values reference,
  k8s secrets documentation, JVM options section
- docs/KMS_ARCHITECTURE.md: add AWS auth in k8s section, update future enhancements
  (Micrometer metrics), clean up formatting

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>